# elisym

./: .editorconfig  .gitattributes  .gitignore  .oxfmtrc.json  .prettierignore  .vercelignore  Anchor.toml  README.md  cspell-dictionary.txt  cspell.json  glama.json  package.json  turbo.json  vercel.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
plugin/: .mcp.json  README.md
plugin/.claude-plugin/: plugin.json
plugin/commands/: setup.md
programs/: README.md
programs/elisym-config/: Cargo.toml  PROGRAM_ID.devnet.txt
programs/elisym-config/scripts/: initialize-devnet.ts
programs/elisym-config/src/: errors.rs  events.rs  lib.rs  state.rs
programs/elisym-config/src/instructions/: accept_admin.rs  cancel_pending_admin.rs  common.rs  increment_stats.rs  initialize.rs  initialize_stats.rs  mod.rs  propose_admin.rs  set_fee_bps.rs  set_treasury.rs
programs/elisym-config/tests/: config.rs
skills/: README.md
skills/elisym/: SKILL.md
skills/elisym-config/: SKILL.md
skills/elisym-customer/: SKILL.md
skills/elisym-provider/: SKILL.md
