[package]
name = "elisym-config"
version = "0.1.0"
description = "Elisym protocol fee and treasury configuration"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "elisym_config"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["event-cpi", "init-if-needed"] }
